--- a/obl/Server/Server.csproj
+++ b/obl/Server/Server.csproj
@@ -6,4 +6,8 @@
         <RootNamespace>Servidor</RootNamespace>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="Domain" />
+    </ItemGroup>
+
 </Project>
