Add game Feature Added
Se agregar la  feature de agregar un nuevo juego, se implementa tambien la posibilidad de ver el catalogo de juegos.
Para este ultimo se debe cambiar la implmentacion para el envio de los datos del catalogo  por su extension.

--- a/obl/Server/Server.csproj
+++ b/obl/Server/Server.csproj
@@ -6,4 +6,8 @@
         <RootNamespace>Servidor</RootNamespace>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Common\Common.csproj" />
+    </ItemGroup>
+
 </Project>
