--- a/obl/Client/App.config
+++ b/obl/Client/App.config
@@ -5,5 +5,6 @@
         <add key="ClientPort" value="0"/>
         <add key="ServerIpAddress" value="192.168.1.5"/>
         <add key="ServerPort" value="30000"/>
+        <add key="CoversPath" value="C:\Users\nicol\Desktop\CoversClient\"/>
     </appSettings>
 </configuration>
