Migration implemented and tested successfully

--- a/obl/Server/App.config
+++ b/obl/Server/App.config
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <appSettings>
-        <add key="ServerIpAddress" value="192.168.1.5"/>
+        <add key="ServerIpAddress" value="192.168.1.8"/>
         <add key="ServerPort" value="30000"/>
         <add key="DefaultPath" value="defaultImage.png"/>
-        <add key="CoversPath"  value="C:\Users\nicol\Desktop\coversServer\"/>
+        <add key="CoversPath"  value="C:\Users\gasto\Documents\GitHub\Obligatorio-1-Programacion-de-redes\CoversServer\"/>
     </appSettings>
 </configuration>
