fix PubishQualification and ShowGameDetails

--- a/obl/Client/App.config
+++ b/obl/Client/App.config
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <appSettings>
-        <add key="ClientIpAddress" value="192.168.1.8"/>
+        <add key="ClientIpAddress" value="192.168.1.6"/>
         <add key="ClientPort" value="0"/>
-        <add key="ServerIpAddress" value="192.168.1.8"/>
+        <add key="ServerIpAddress" value="192.168.1.6"/>
         <add key="ServerPort" value="30000"/>
-        <add key="CoversPath" value="C:\Users\gasto\Documents\GitHub\Obligatorio-1-Programacion-de-redes\CoversClient\"/>
+        <add key="CoversPath" value="C:\Users\nicol\Desktop\"/>
     </appSettings>
 </configuration>
