Advancements made in creation of the webapi and receiveMQmethods in ServerLogs and sendMQmethods in server

--- a/obl/Server/App.config
+++ b/obl/Server/App.config
@@ -5,5 +5,7 @@
         <add key="ServerPort" value="30000"/>
         <add key="DefaultPath" value="defaultImage.png"/>
         <add key="CoversPath"  value="C:\Users\nicol\Desktop\ort\"/>
+        <add key="HostName" value="localhost"/>
+        <add key="QueueName" value="log_queue"/>
     </appSettings>
 </configuration>
