small fixes to make serverlog run

--- a/obl/Server/App.config
+++ b/obl/Server/App.config
@@ -4,7 +4,7 @@
         <add key="ServerIpAddress" value="192.168.1.9"/>
         <add key="ServerPort" value="30000"/>
         <add key="DefaultPath" value="defaultImage.png"/>
-        <add key="CoversPath"  value="C:\Users\nicol\Desktop\ort\"/>
+        <add key="CoversPath"  value="C:\Users\gasto\Documents\GitHub\Obligatorio-1-Programacion-de-redes\CoversServer\"/>
         <add key="HostName" value="localhost"/>
         <add key="QueueName" value="log_queue"/>
     </appSettings>
