Small fixes, added persistency in queue messages and showLogs method

--- a/obl/Client/App.config
+++ b/obl/Client/App.config
@@ -5,6 +5,6 @@
         <add key="ClientPort" value="0"/>
         <add key="ServerIpAddress" value="192.168.1.9"/>
         <add key="ServerPort" value="30000"/>
-        <add key="CoversPath" value="C:\Users\nicol\Desktop\"/>
+        <add key="CoversPath" value="C:\Users\gasto\Documents\GitHub\Obligatorio-1-Programacion-de-redes\CoversClient\"/>
     </appSettings>
 </configuration>
