Revert "Develop logs server"

--- a/obl/Server/App.config
+++ b/obl/Server/App.config
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <appSettings>
-        <add key="ServerIpAddress" value="192.168.0.116"/>
+        <add key="ServerIpAddress" value="192.168.1.6"/>
         <add key="ServerPort" value="30000"/>
         <add key="DefaultPath" value="defaultImage.png"/>
-        <add key="CoversPath"  value="C:\Users\"/>
-        <add key="HostName" value="localhost"/>
-        <add key="QueueName" value="log_queue"/>
+        <add key="CoversPath"  value="C:\Users\nicol\Desktop\ort\"/>
     </appSettings>
 </configuration>
