--- a/obl/Server/Server.csproj
+++ b/obl/Server/Server.csproj
@@ -6,6 +6,8 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Google.Protobuf" Version="3.19.1" />
+      <PackageReference Include="Grpc.AspNetCore" Version="2.40.0" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
       <PackageReference Include="RabbitMQ.Client" Version="6.2.2" />
     </ItemGroup>
