Renamed proto greeter name to adminCommunication and all clases sorrounding. Also added UserAndCatalogueManager to GreeterService

--- a/obl/Server/Server.csproj
+++ b/obl/Server/Server.csproj
@@ -6,7 +6,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <Protobuf Include="AdminCommunication\Protos\greet.proto" GrpcServices="Server"/>
+        <Protobuf Include="AdminCommunication\Protos\adminCommunication.proto" GrpcServices="Server"/>
     </ItemGroup>
 
     <ItemGroup>
