--- a/obl/ServerAdmin/ServerAdmin.csproj
+++ b/obl/ServerAdmin/ServerAdmin.csproj
@@ -12,7 +12,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
-    <Protobuf Include="Protos\greet.proto" GrpcServices="Client" />
+    <Protobuf Include="Protos\adminCommunication.proto" GrpcServices="Client" />
   </ItemGroup>
 
 </Project>
