Pull Rquest from develop couldnt be done due to merge erros

--- a/obl/Client/App.config
+++ b/obl/Client/App.config
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <appSettings>
-        <add key="ClientIpAddress" value="192.168.1.6"/>
+        <add key="ClientIpAddress" value="192.168.1.10"/>
         <add key="ClientPort" value="0"/>
-        <add key="ServerIpAddress" value="192.168.1.6"/>
+        <add key="ServerIpAddress" value="192.168.1.10"/>
         <add key="ServerPort" value="30000"/>
-        <add key="CoversPath" value="C:\Users\nicol\Desktop\"/>
+        <add key="CoversPath" value="C:\Users\"/>
     </appSettings>
 </configuration>
